--- a/html/blogs.html
+++ b/html/blogs.html
@@ -33,6 +33,7 @@
 <h2 id="org9a99443"><span class="section-number-2">1</span> 2018</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201811 <a href="why-i-quit-google-to-work-for-myself.html">Why I Quit Google to Work for Myself</a></li>
 <li>201811 <a href="whats-the-largest-amount-of-bad-code-you-have-ever-seen-work.html">{Ask HN}What's the largest amount of bad code you have ever seen work?</a></li>
 <li>201811 <a href="interview-with-gmail-creator-and-y-combinator-partner-paul-buchheit.html">Interview with Gmail Creator Paul Buchheit</a></li>
 <li>201811 <a href="the-economics-of-getting-hired-as-a-data-scientist.html">The economics of getting hired as a data scientist</a></li>
