--- a/html/poetry-and-movie.html
+++ b/html/poetry-and-movie.html
@@ -16,29 +16,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga7cdcc8">1. A Hard Rain’s A-Gonna Fall (Bob Dylan)</a></li>
-<li><a href="#org7f59a9a">2. Mr Tambourine Man (Bob Dylan)</a></li>
-<li><a href="#org4fc41c2">3. Desolation Row (Bob Dylan)</a></li>
-<li><a href="#orgc2e6bb4">4. 俾面派对 (Beyond)</a></li>
-<li><a href="#org31bbab6">5. Stairway to Heaven (Led Zepplin)</a></li>
-<li><a href="#orgda392f1">6. Do not go gentle into that good night (Dylan Thomas)</a></li>
-<li><a href="#org95395a8">7. 赛德克巴莱(Seediq Bale) by 魏德圣</a></li>
-<li><a href="#org522efcc">8. 闻香识女人(Scent of a Woman)</a></li>
-<li><a href="#org4b6012c">9. 低俗小说(Pulp Fiction) by Quentin Tarantino</a></li>
-<li><a href="#org6757431">10. 拆弹部队(The Hurt Locker)</a></li>
-<li><a href="#org595971e">11. 林肯(Lincoln)(2012) by Steven Spielberg</a></li>
-<li><a href="#org0f2be31">12. 致命魔术(The Prestige) by Chris Nolan</a></li>
-<li><a href="#org26b93de">13. 点球成金(Moneyball)</a></li>
-<li><a href="#org8543eb3">14. 让子弹飞(Let Bullet Flys)</a></li>
-<li><a href="#orga2ebf0a">15. Guess I’m Doing Fine (Bob Dylan)</a></li>
-<li><a href="#org51d231a">16. 白日梦想家(The Secret Life of Walter Mitty)</a></li>
-<li><a href="#orgd7bacc0">17. Boots of Spanish Leather (Bob Dylan)</a></li>
-<li><a href="#orgbe5ecb8">18. The Times They Are A-Changin’ (Bob Dylan)</a></li>
+<li><a href="#orgd970387">1. A Hard Rain’s A-Gonna Fall (Bob Dylan)</a></li>
+<li><a href="#org0d6fdb7">2. Mr Tambourine Man (Bob Dylan)</a></li>
+<li><a href="#org9715813">3. Desolation Row (Bob Dylan)</a></li>
+<li><a href="#org98f40b4">4. 俾面派对 (Beyond)</a></li>
+<li><a href="#orgfa3df14">5. Stairway to Heaven (Led Zepplin)</a></li>
+<li><a href="#orgaad97e5">6. Do not go gentle into that good night (Dylan Thomas)</a></li>
+<li><a href="#orgcbea249">7. 赛德克巴莱(Seediq Bale) by 魏德圣</a></li>
+<li><a href="#orgc3ffead">8. 闻香识女人(Scent of a Woman)</a></li>
+<li><a href="#org4f02116">9. 低俗小说(Pulp Fiction) by Quentin Tarantino</a></li>
+<li><a href="#org426665a">10. 拆弹部队(The Hurt Locker)</a></li>
+<li><a href="#org753bcb6">11. 林肯(Lincoln)(2012) by Steven Spielberg</a></li>
+<li><a href="#org4b8882d">12. 致命魔术(The Prestige) by Chris Nolan</a></li>
+<li><a href="#orgada09bf">13. 点球成金(Moneyball)</a></li>
+<li><a href="#orgae6a375">14. 让子弹飞(Let Bullet Flys)</a></li>
+<li><a href="#orgd04ca1a">15. Guess I’m Doing Fine (Bob Dylan)</a></li>
+<li><a href="#orge54de5f">16. 白日梦想家(The Secret Life of Walter Mitty)</a></li>
+<li><a href="#orgde66aed">17. Boots of Spanish Leather (Bob Dylan)</a></li>
+<li><a href="#orgc930449">18. The Times They Are A-Changin’ (Bob Dylan)</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga7cdcc8" class="outline-2">
-<h2 id="orga7cdcc8"><span class="section-number-2">1</span> A Hard Rain’s A-Gonna Fall (Bob Dylan)</h2>
+<div id="outline-container-orgd970387" class="outline-2">
+<h2 id="orgd970387"><span class="section-number-2">1</span> A Hard Rain’s A-Gonna Fall (Bob Dylan)</h2>
 <div class="outline-text-2" id="text-1">
 <p class="verse">
 Oh, where have you been, my blue-eyed son?<br />
@@ -106,8 +106,8 @@ It's a hard rain's a-gonna fall<br />
 </div>
 </div>
 
-<div id="outline-container-org7f59a9a" class="outline-2">
-<h2 id="org7f59a9a"><span class="section-number-2">2</span> Mr Tambourine Man (Bob Dylan)</h2>
+<div id="outline-container-org0d6fdb7" class="outline-2">
+<h2 id="org0d6fdb7"><span class="section-number-2">2</span> Mr Tambourine Man (Bob Dylan)</h2>
 <div class="outline-text-2" id="text-2">
 <p class="verse">
 Hey! Mr. Tambourine man, play a song for me<br />
@@ -178,8 +178,8 @@ In the jingle jangle morning I'll come following you<br />
 </div>
 </div>
 
-<div id="outline-container-org4fc41c2" class="outline-2">
-<h2 id="org4fc41c2"><span class="section-number-2">3</span> Desolation Row (Bob Dylan)</h2>
+<div id="outline-container-org9715813" class="outline-2">
+<h2 id="org9715813"><span class="section-number-2">3</span> Desolation Row (Bob Dylan)</h2>
 <div class="outline-text-2" id="text-3">
 <p class="verse">
 They’re selling postcards of the hanging<br />
@@ -315,8 +315,8 @@ From Desolation Row<br />
 </div>
 </div>
 
-<div id="outline-container-orgc2e6bb4" class="outline-2">
-<h2 id="orgc2e6bb4"><span class="section-number-2">4</span> 俾面派对 (Beyond)</h2>
+<div id="outline-container-org98f40b4" class="outline-2">
+<h2 id="org98f40b4"><span class="section-number-2">4</span> 俾面派对 (Beyond)</h2>
 <div class="outline-text-2" id="text-4">
 <p class="verse">
 穿起一身金衣装<br />
@@ -364,8 +364,8 @@ From Desolation Row<br />
 </p>
 </div>
 </div>
-<div id="outline-container-org31bbab6" class="outline-2">
-<h2 id="org31bbab6"><span class="section-number-2">5</span> Stairway to Heaven (Led Zepplin)</h2>
+<div id="outline-container-orgfa3df14" class="outline-2">
+<h2 id="orgfa3df14"><span class="section-number-2">5</span> Stairway to Heaven (Led Zepplin)</h2>
 <div class="outline-text-2" id="text-5">
 <p class="verse">
 There's a lady who's sure all that glitters is gold（有一位姑娘她相信闪光的都是金子）<br />
@@ -424,8 +424,8 @@ And she's buying a stairway to heaven（她想买一架通往天堂的阶梯）<
 </p>
 </div>
 </div>
-<div id="outline-container-orgda392f1" class="outline-2">
-<h2 id="orgda392f1"><span class="section-number-2">6</span> Do not go gentle into that good night (Dylan Thomas)</h2>
+<div id="outline-container-orgaad97e5" class="outline-2">
+<h2 id="orgaad97e5"><span class="section-number-2">6</span> Do not go gentle into that good night (Dylan Thomas)</h2>
 <div class="outline-text-2" id="text-6">
 <p class="verse">
 Do not go gentle into that good night, 不要温和地走进那个良夜,<br />
@@ -455,8 +455,8 @@ Rage, rage against the dying of the light. 怒斥吧,怒斥光的消逝。<br />
 </p>
 </div>
 </div>
-<div id="outline-container-org95395a8" class="outline-2">
-<h2 id="org95395a8"><span class="section-number-2">7</span> 赛德克巴莱(Seediq Bale) by 魏德圣</h2>
+<div id="outline-container-orgcbea249" class="outline-2">
+<h2 id="orgcbea249"><span class="section-number-2">7</span> 赛德克巴莱(Seediq Bale) by 魏德圣</h2>
 <div class="outline-text-2" id="text-7">
 <hr />
 
@@ -529,8 +529,8 @@ Rage, rage against the dying of the light. 怒斥吧,怒斥光的消逝。<br />
 </p>
 </div>
 </div>
-<div id="outline-container-org522efcc" class="outline-2">
-<h2 id="org522efcc"><span class="section-number-2">8</span> 闻香识女人(Scent of a Woman)</h2>
+<div id="outline-container-orgc3ffead" class="outline-2">
+<h2 id="orgc3ffead"><span class="section-number-2">8</span> 闻香识女人(Scent of a Woman)</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 Frank: I’ll show you out of order. You don’t know what out of order is, Mr. Trask, I’d show you, but I’m too old, I’m too tired, I’m too <b><b><b>*in’ blind, if I were the man I was five years ago, I’d take a flame thrower to this place! Out of order? Who the hell do you think you’re talkin’ to? I’ve been around, you know? There was a time I could see, and I have seen, boys like these, younger than these, their arms torn out, their legs ripped off, but there is nothin’ like the sight of an amputated spirit. There is no prosthetic for that, you think you’re merely sendin’ this splendid foot solider back home to Oregen with his tail between his legs, but I say you’re executin’ his soul! And why? Because he is not a Baird man. Baird men, you hurt this boy, you’re gonna be Baird bums, the lot of you. And Harry, Jimmy, and Trent, wherever you are out there, *</b></b></b> you too!
@@ -549,8 +549,8 @@ Frank: I’m not finished. As I came in here, I heard those words: cradle of lea
 </p>
 </div>
 </div>
-<div id="outline-container-org4b6012c" class="outline-2">
-<h2 id="org4b6012c"><span class="section-number-2">9</span> 低俗小说(Pulp Fiction) by Quentin Tarantino</h2>
+<div id="outline-container-org4f02116" class="outline-2">
+<h2 id="org4f02116"><span class="section-number-2">9</span> 低俗小说(Pulp Fiction) by Quentin Tarantino</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 [Ezekiel 25:17. "The path of the righteous man is beset on all sides by the inequities of the selfish and the tyranny of evil men. Blessed is he who in the name of charity and good will, shepherds the weak through the valley of the darkness. For he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who attempt to poison and destroy my brothers. And you will know I am the Lord when I lay my vengeance upon you]
@@ -562,8 +562,8 @@ Frank: I’m not finished. As I came in here, I heard those words: cradle of lea
 </div>
 </div>
 
-<div id="outline-container-org6757431" class="outline-2">
-<h2 id="org6757431"><span class="section-number-2">10</span> 拆弹部队(The Hurt Locker)</h2>
+<div id="outline-container-org426665a" class="outline-2">
+<h2 id="org426665a"><span class="section-number-2">10</span> 拆弹部队(The Hurt Locker)</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 你喜欢玩所有的毛绒玩具,你喜欢妈妈,喜欢爸爸,喜欢你的小睡衣.你什么都喜欢.是不是?知道吗,等你长大了,曾经喜欢的东西也许会变得不再特别,就像这个玩偶盒,你会发现那只是一片铁皮加一个人偶.那些原本钟爱的东西会渐渐被你遗忘,到了我这个年纪,钟爱的东西也许只剩下一两件了,对我来说只剩一件了.
@@ -571,8 +571,8 @@ Frank: I’m not finished. As I came in here, I heard those words: cradle of lea
 </div>
 </div>
 
-<div id="outline-container-org595971e" class="outline-2">
-<h2 id="org595971e"><span class="section-number-2">11</span> 林肯(Lincoln)(2012) by Steven Spielberg</h2>
+<div id="outline-container-org753bcb6" class="outline-2">
+<h2 id="org753bcb6"><span class="section-number-2">11</span> 林肯(Lincoln)(2012) by Steven Spielberg</h2>
 <div class="outline-text-2" id="text-11">
 <p>
 罗盘可以指明前进的方向，但它不会告诉你路上那里有高山、湖泊、沼泽，如果你一味前行，可能永远到不了目的地。
@@ -580,8 +580,8 @@ Frank: I’m not finished. As I came in here, I heard those words: cradle of lea
 </div>
 </div>
 
-<div id="outline-container-org0f2be31" class="outline-2">
-<h2 id="org0f2be31"><span class="section-number-2">12</span> 致命魔术(The Prestige) by Chris Nolan</h2>
+<div id="outline-container-org4b8882d" class="outline-2">
+<h2 id="org4b8882d"><span class="section-number-2">12</span> 致命魔术(The Prestige) by Chris Nolan</h2>
 <div class="outline-text-2" id="text-12">
 <p>
 Every great magic trick consists of three acts. The first act is called The Pledge: the magician shows you something ordinary, but of course, it probably isn't. The second act is called The Turn. The magician makes his ordinary something do something extraordinary. Now, if you're looking for the secret&#x2026;you won't find it. That's why there's a third act, called The Prestige. This is the part with the twists and turns, where lives hang in the balance, and you see something shocking you've never seen before.
@@ -593,8 +593,8 @@ Every great magic trick consists of three acts. The first act is called The Pled
 </div>
 </div>
 
-<div id="outline-container-org26b93de" class="outline-2">
-<h2 id="org26b93de"><span class="section-number-2">13</span> 点球成金(Moneyball)</h2>
+<div id="outline-container-orgada09bf" class="outline-2">
+<h2 id="orgada09bf"><span class="section-number-2">13</span> 点球成金(Moneyball)</h2>
 <div class="outline-text-2" id="text-13">
 <p>
 没错，我可能被炒掉。那样的话，我44岁只有高中学历，还很想送女儿上大学。而你才二十五岁，耶鲁大学毕业，还有很漂亮的见习履历。我想我们没有说到点子上，我们应该思考的问题是，你到底信不信我们会成功？你觉得我们还有必要向别人解释？不必，向任何人解释。
@@ -609,8 +609,8 @@ Every great magic trick consists of three acts. The first act is called The Pled
 </p>
 </div>
 </div>
-<div id="outline-container-org8543eb3" class="outline-2">
-<h2 id="org8543eb3"><span class="section-number-2">14</span> 让子弹飞(Let Bullet Flys)</h2>
+<div id="outline-container-orgae6a375" class="outline-2">
+<h2 id="orgae6a375"><span class="section-number-2">14</span> 让子弹飞(Let Bullet Flys)</h2>
 <div class="outline-text-2" id="text-14">
 <p>
 看懂《讓子彈飛》这个信仰與人性並行的社會
@@ -620,8 +620,8 @@ Every great magic trick consists of three acts. The first act is called The Pled
 </div>
 </div>
 
-<div id="outline-container-orga2ebf0a" class="outline-2">
-<h2 id="orga2ebf0a"><span class="section-number-2">15</span> Guess I’m Doing Fine (Bob Dylan)</h2>
+<div id="outline-container-orgd04ca1a" class="outline-2">
+<h2 id="orgd04ca1a"><span class="section-number-2">15</span> Guess I’m Doing Fine (Bob Dylan)</h2>
 <div class="outline-text-2" id="text-15">
 <p class="verse">
 Well, I ain’t got my childhood<br />
@@ -679,8 +679,8 @@ Hey, hey, so I guess I’m doin’ fine<br />
 </p>
 </div>
 </div>
-<div id="outline-container-org51d231a" class="outline-2">
-<h2 id="org51d231a"><span class="section-number-2">16</span> 白日梦想家(The Secret Life of Walter Mitty)</h2>
+<div id="outline-container-orge54de5f" class="outline-2">
+<h2 id="orge54de5f"><span class="section-number-2">16</span> 白日梦想家(The Secret Life of Walter Mitty)</h2>
 <div class="outline-text-2" id="text-16">
 <p>
 Beautiful things don't ask for attention.
@@ -704,8 +704,8 @@ That is the purpose of LIFE.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd7bacc0" class="outline-2">
-<h2 id="orgd7bacc0"><span class="section-number-2">17</span> Boots of Spanish Leather (Bob Dylan)</h2>
+<div id="outline-container-orgde66aed" class="outline-2">
+<h2 id="orgde66aed"><span class="section-number-2">17</span> Boots of Spanish Leather (Bob Dylan)</h2>
 <div class="outline-text-2" id="text-17">
 <p class="verse">
 Oh, I’m sailin’ away my own true love<br />
@@ -763,8 +763,8 @@ Spanish boots of Spanish leather<br />
 </p>
 </div>
 </div>
-<div id="outline-container-orgbe5ecb8" class="outline-2">
-<h2 id="orgbe5ecb8"><span class="section-number-2">18</span> The Times They Are A-Changin’ (Bob Dylan)</h2>
+<div id="outline-container-orgc930449" class="outline-2">
+<h2 id="orgc930449"><span class="section-number-2">18</span> The Times They Are A-Changin’ (Bob Dylan)</h2>
 <div class="outline-text-2" id="text-18">
 <p class="verse">
 Come gather ’round people<br />
@@ -824,5 +824,5 @@ For the times they are a-changin’<br />
 </div>
 </div>
 </div>
-<div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/poem-and-movie.html';this.page.identifier = 'poem-and-movie.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
+<div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/poetry-and-movie.html';this.page.identifier = 'poetry-and-movie.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
 </html>
