--- a/html/fun.html
+++ b/html/fun.html
@@ -14,6 +14,18 @@
 <h1 class="title">Fun</h1>
 <hr />
 <p>
+期末考试又要到了[笑而不语][笑而不语]
+</p>
+
+
+
+<div class="figure">
+<p><img src="images/sugarcane-multi-usages.jpg" alt="sugarcane-multi-usages.jpg" />
+</p>
+</div>
+
+<hr />
+<p>
 “什么叫细思恐极？”
 </p>
 
